--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,7 @@ margin-left: calc(-1 * var(--card-set-gap));
     margin-bottom: 50px;   
 }
 
-.we-do {
+.we-do__container{
 padding-top: 0;
 
 }
@@ -367,10 +367,10 @@ padding-top: 0;
   --card-item: 3;
 }
 
-.we-do-item {
+.we-do-list__item {
   position: relative;
 }
-.we-do-text {
+.we-do-list__text {
   position: absolute;
   z-index: 1;
   bottom: 0;
@@ -384,7 +384,7 @@ padding-top: 0;
   padding-left: 24px;
   background-color: var(--bgcolor-wdtext);
 }
-.we-do-title {
+.we-do-list__title {
   line-height: 1.14;
   font-weight: 700;
   text-align: center;
@@ -397,36 +397,40 @@ padding-top: 0;
     background-color: var(--light-gray-backg);
 }
 
-.team-item {
+
+.team-list__item {
   box-shadow: 0px 1px 3px var(--team-btm), 0px 1px 1px var(--team-bl), 0px 2px 1px var(--team-br);
 border-radius: 0px 0px 4px 4px;
    }
 
-
-.team-specialist,
-.team-title {
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
-}
-.team-specialist {
-  margin-bottom: 16px;
-  }
-
-.team-title {
-    font-weight: 500;
-    letter-spacing: 0.03em;
-    color: var(--current-color);
-    margin-bottom: 10px;
-  }
-
-.team-content {
+.team__content {
     align-items: center;
     background-color: var(--white-color);
 
     padding: 30px ;
    
 }
+
+.team__specialist,
+.team__title {
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+}
+.team__specialist {
+  margin-bottom: 16px;
+  }
+
+.team__content {
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    color: var(--current-color);
+    margin-bottom: 10px;
+    border-radius: 0px 0px 4px 4px;
+    margin: 0;
+  }
+
+
 
 /* контент портфолио */
 .portfolio-link {
