--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,3 +22,12 @@
 
 //layouts style
 @import './layouts/header';
+@import './layouts/we-do';
+@import './layouts/about';
+@import './layouts/card';
+@import './layouts/clients';
+@import './layouts/footer';
+@import './layouts/header';
+@import './layouts/hero';
+@import './layouts/portfolio';
+@import './layouts/team';
