--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,6 +1,6 @@
 /* block 2  */
 body {
-    color: var(--grey-color);
+    color: $grey-color;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-size: 14px;
