--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,7 @@
 /* block 1  */
 :root {
-  --background-dark-grey: #2f303a;
-  --grey-color: #757575;
-  --blue-logo-color: #2196f3;
-  --dark-logo-color: #000000;
-  --white-color: #ffffff;
-  --current-color: #212121;
-  --footer-primary-color: rgba(255, 255, 255, 0.6);
-  --light-gray-backg: #f5f4fa;
-  --card-set-gap: 30px;
-  --button-shadow: rgba(0, 0, 0, 0.25);
-  --grey-edging: rgba(238, 238, 238, 1);
   --card-item: 4;
-  --grey-card-content:#EEEEEE;
-  --team-btm: rgba(0, 0, 0, 0.12);
-  --team-bl: rgba(0, 0, 0, 0.14);
-  --team-br: rgba(0, 0, 0, 0.2);
-  --color-border-header: #ECECEC;
-  --hero-shadow: rgba(47, 48, 58, 0.4);
-  --social-icon: rgba(175, 177, 184, 1);
-  --footer-icon: rgba(255, 255, 255, 0.1);
-  --bgcolor-wdtext: rgba(47, 48, 58, 0.8);
-  --modal-background: rgba(0, 0, 0, 0.2);
-  --cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
-  --duration: 250ms;
-  --borderinput: rgba(33, 33, 33, 0.2);
-  --blue-dark: #188CE8;
+  --card-set-gap: 30px;
 }
 
 .visuaaly-hidden {
@@ -44,7 +20,7 @@
 
 /* block 2  */
 body {
-  color: var(--grey-color);
+  color: #757575;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-size: 14px;
@@ -99,36 +75,36 @@ img {
           align-items: center;
   margin: 0 auto;
   cursor: pointer;
-  color: var(--white-color);
-  background-color: var(--blue-logo-color);
+  color: #ffffff;
+  background-color: #2196f3;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
   border-radius: 4px;
-  -webkit-box-shadow: 0px 4px 4px 0px var(--button-shadow);
-          box-shadow: 0px 4px 4px 0px var(--button-shadow);
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border: none;
   padding: 10px 32px;
   -webkit-transition-property: color, background-color;
   transition-property: color, background-color;
-  -webkit-transition-duration: var(--duration);
-          transition-duration: var(--duration);
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  background-color: var(--blue-dark);
+  background-color: #188CE8;
 }
 
 .select-button {
   cursor: pointer;
   font-family: inherit;
-  background-color: var(--light-gray-backg);
-  color: var(--current-color);
+  background-color: #f5f4fa;
+  color: #212121;
   border: none;
   font-weight: 500;
   font-size: 16px;
@@ -139,16 +115,16 @@ img {
   transition-property: color, background-color, -webkit-box-shadow;
   transition-property: color, background-color, box-shadow;
   transition-property: color, background-color, box-shadow, -webkit-box-shadow;
-  -webkit-transition-duration: var(--duration);
-          transition-duration: var(--duration);
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .select-button:hover,
 .select-button:focus {
-  background-color: var(--blue-logo-color);
-  color: var(--white-color);
+  background-color: #2196f3;
+  color: #ffffff;
 }
 
 .select-list {
@@ -168,8 +144,8 @@ img {
 
 .select-button:hover,
 .select-button:focus {
-  background-color: var(--blue-logo-color);
-  color: var(--white-color);
+  background-color: #2196f3;
+  color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -200,11 +176,11 @@ img {
 }
 
 .footer.social-link-icon {
-  fill: var(--white-color);
+  fill: #ffffff;
 }
 
 .logo {
-  color: var(--blue-logo-color);
+  color: #2196f3;
   font-family: "Raleway", cursive;
   font-weight: 700;
   font-size: 26px;
@@ -220,11 +196,11 @@ img {
 }
 
 .dark-logo {
-  color: var(--dark-logo-color);
+  color: #000000;
 }
 
 .white {
-  color: var(--white-color);
+  color: #ffffff;
 }
 
 .register-checkbox:checked + .register-icon .register-icon-uncheck {
@@ -234,8 +210,8 @@ img {
 }
 
 .register-icon-uncheck {
-  -webkit-transition: fill var(--duration) var(--cubic-bezier);
-  transition: fill var(--duration) var(--cubic-bezier);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .register-icon-check {
@@ -252,16 +228,16 @@ img {
 
 .register-checkbox:hover + .register-icon .register-icon-uncheck,
 .register-checkbox:focus + .register-icon .register-icon-uncheck {
-  fill: var(--blue-logo-color);
+  fill: #2196f3;
 }
 
 .close-btn:hover .modal-btn-icon,
 .close-btn:focus .modal-btn-icon {
-  fill: var(--blue-logo-color);
+  fill: #2196f3;
 }
 
 .register-form-agreement-link {
-  color: var(--blue-logo-color);
+  color: #2196f3;
 }
 
 .backdrop.is-hidden {
@@ -286,7 +262,7 @@ img {
           justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: var(--modal-background);
+  background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
@@ -299,7 +275,7 @@ img {
   width: 528px;
   height: 581px;
   padding: 40px;
-  background-color: var(--white-color);
+  background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -346,7 +322,7 @@ img {
   font-weight: 700;
   line-height: 1.15;
   text-align: center;
-  color: var(--current-color);
+  color: #212121;
   margin-bottom: 12px;
   font-size: 20px;
 }
@@ -355,7 +331,7 @@ img {
   font-size: 12px;
   line-height: 1.1666666667;
   letter-spacing: 0.01em;
-  color: var(--grey-color);
+  color: #757575;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -376,30 +352,30 @@ img {
   width: 100%;
   padding-left: 42px;
   border-radius: 4px;
-  border: 1px solid var(--borderinput);
+  border: 1px solid rgba(33, 33, 33, 0.2);
   outline: none;
   cursor: pointer;
   -webkit-transition-property: border;
   transition-property: border;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:hover,
 .form-input:focus {
-  border: 1px solid var(--blue-logo-color);
+  border: 1px solid #2196f3;
 }
 
 .form-input:hover + .form-icon,
 .form-input:focus + .form-icon {
-  fill: var(--blue-logo-color);
+  fill: #2196f3;
 }
 
 .form-fild:hover input,
 .form-fild:focus input {
-  border: 1px solid var(--blue-logo-color);
+  border: 1px solid #2196f3;
 }
 
 .form-fild:focus-within .form-icon,
@@ -413,8 +389,8 @@ img {
   left: 16px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  -webkit-transition: fill var(--duration) var(--cubic-bezier);
-  transition: fill var(--duration) var(--cubic-bezier);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .test {
@@ -425,7 +401,7 @@ img {
   resize: none;
   width: 100%;
   height: 120px;
-  border: 1px solid var(--borderinput);
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
 
@@ -442,13 +418,13 @@ img {
   transition-property: border;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-fild-comment:focus .call-back-comment,
 .form-fild-comment:hover .call-back-comment {
-  border: 1px solid var(--blue-logo-color);
+  border: 1px solid #2196f3;
 }
 
 .call-back-comment {
@@ -527,7 +503,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: var(--current-color);
+  color: #212121;
 }
 
 .nav__list {
@@ -554,13 +530,13 @@ img {
           align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
-  -webkit-transition: color var(--duration) var(--cubic-bezier);
-  transition: color var(--duration) var(--cubic-bezier);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav__link--active {
   position: relative;
-  color: var(--blue-logo-color);
+  color: #2196f3;
 }
 
 .nav__link.nav__link--active::after {
@@ -571,16 +547,16 @@ img {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var(--blue-logo-color);
+  background-color: #2196f3;
 }
 
 .nav__link.list {
-  color: var(--current-color);
+  color: #212121;
 }
 
 .nav__link .link:hover,
 .nav__link .link:focus {
-  color: var(--blue-logo-color);
+  color: #2196f3;
 }
 
 .contact-list {
@@ -603,7 +579,7 @@ img {
 .contact__link:focus,
 .nav__link:hover,
 .nav__link:focus {
-  color: var(--blue-logo-color);
+  color: #2196f3;
 }
 
 .social-list {
@@ -630,39 +606,39 @@ img {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 50%;
-  background-color: var(--footer-icon);
+  background-color: rgba(255, 255, 255, 0.1);
   width: 44px;
   height: 44px;
   -webkit-transition-property: background-color;
   transition-property: background-color;
-  -webkit-transition-duration: var(--duration);
-          transition-duration: var(--duration);
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer .social-icon {
-  fill: var(--white-color);
+  fill: #ffffff;
 }
 
 .social-icon {
-  fill: var(--social-icon);
+  fill: rgb(175, 177, 184);
   -webkit-transition-property: fill;
   transition-property: fill;
-  -webkit-transition-duration: var(--duration);
-          transition-duration: var(--duration);
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link-icon:hover .social-icon,
 .social-link-icon:focus .social-icon {
-  fill: var(--white-color);
+  fill: #ffffff;
 }
 
 .social-link-icon:hover,
 .social-link-icon:focus {
-  background-color: var(--blue-logo-color);
+  background-color: #2196f3;
 }
 
 .section-title {
@@ -670,7 +646,7 @@ img {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  color: var(--current-color);
+  color: #212121;
   margin-bottom: 50px;
 }
 
@@ -681,7 +657,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--white-color);
+  color: #ffffff;
   margin-bottom: 20px;
 }
 
@@ -690,7 +666,7 @@ img {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  border-bottom: 1px solid var(--color-border-header);
+  border-bottom: 1px solid #ECECEC;
 }
 
 .header-container {
@@ -732,7 +708,7 @@ img {
   height: 70px;
   padding-right: 24px;
   padding-left: 24px;
-  background-color: var(--bgcolor-wdtext);
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 .we-do-list__title {
@@ -740,7 +716,7 @@ img {
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
-  color: var(--white-color);
+  color: #ffffff;
 }
 
 .about-card-icon {
@@ -765,7 +741,7 @@ img {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--current-color);
+  color: #212121;
   margin-bottom: 10px;
 }
 
@@ -786,13 +762,13 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--current-color);
+  color: #212121;
   margin-bottom: 4px;
 }
 
 .card-content {
   padding: 20px 24px;
-  border: 1px solid var(--grey-card-content);
+  border: 1px solid #EEEEEE;
   border-top: none;
 }
 
@@ -813,27 +789,27 @@ img {
           align-items: center;
   height: 92px;
   padding: 16px;
-  border: 1px solid var(--social-icon);
-  fill: var(--social-icon);
+  border: 1px solid rgb(175, 177, 184);
+  fill: rgb(175, 177, 184);
   border-radius: 4px;
   -webkit-transition-property: border, fill;
   transition-property: border, fill;
-  -webkit-transition-duration: var(--duration);
-          transition-duration: var(--duration);
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
 .clients-link:focus {
-  border: 1px solid var(--blue-logo-color);
-  fill: var(--blue-logo-color);
+  border: 1px solid #2196f3;
+  fill: #2196f3;
 }
 
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: var(--background-dark-grey);
+  background-color: #2f303a;
 }
 
 .footer-container {
@@ -868,23 +844,66 @@ img {
 .address .link {
   -webkit-transition-property: color;
   transition-property: color;
-  -webkit-transition-duration: var(--duration);
-          transition-duration: var(--duration);
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link {
-  color: var(--footer-primary-color);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .street {
-  color: var(--white-color);
+  color: #ffffff;
 }
 
 .address .link:hover,
 .address .link:focus {
-  color: var(--blue-logo-color);
+  color: #2196f3;
+}
+
+.footer-submit-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer-submit-form input {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  padding: 16px 15px;
+  font-size: 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+.subscribe-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.button-submit {
+  background: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px;
+          box-shadow: 0px 4px 4px;
+  border-radius: 4px;
+  border: none;
+}
+
+.span-subscribe {
+  margin-right: 10px;
 }
 
 /* block 4  */
@@ -892,7 +911,7 @@ img {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  border-bottom: 1px solid var(--color-border-header);
+  border-bottom: 1px solid #ECECEC;
 }
 
 .header-container {
@@ -911,19 +930,19 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: var(--background-dark-grey);
+  background-color: #2f303a;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
-  background-image: -webkit-gradient(linear, left top, right top, from(var(--hero-shadow)), to(var(--hero-shadow))), url(../images/header-photo.jpg);
-  background-image: linear-gradient(to right, var(--hero-shadow), var(--hero-shadow)), url(../images/header-photo.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header-photo.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-photo.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .hero-title {
-  color: var(--white-color);
+  color: #ffffff;
   font-weight: 900;
   font-size: 44px;
   text-transform: uppercase;
@@ -948,10 +967,10 @@ img {
   transition-property: -webkit-box-shadow;
   transition-property: box-shadow;
   transition-property: box-shadow, -webkit-box-shadow;
-  -webkit-transition-duration: var(--duration);
-          transition-duration: var(--duration);
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover,
@@ -969,8 +988,8 @@ img {
   overflow: hidden;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
-  -webkit-transition-timing-function: var(--cubic-bezier);
-          transition-timing-function: var(--cubic-bezier);
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay {
@@ -990,7 +1009,7 @@ img {
   height: 100%;
   line-height: 1.6;
   font-size: 18px;
-  color: var(--white-color);
+  color: #ffffff;
   padding: 63px 24px;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
@@ -1008,12 +1027,12 @@ img {
 }
 
 .team {
-  background-color: var(--light-gray-backg);
+  background-color: #f5f4fa;
 }
 
 .team-list__item {
-  -webkit-box-shadow: 0px 1px 3px var(--team-btm), 0px 1px 1px var(--team-bl), 0px 2px 1px var(--team-br);
-          box-shadow: 0px 1px 3px var(--team-btm), 0px 1px 1px var(--team-bl), 0px 2px 1px var(--team-br);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -1021,7 +1040,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: var(--white-color);
+  background-color: #ffffff;
   padding: 30px;
 }
 
@@ -1039,7 +1058,7 @@ img {
 .team__content {
   font-weight: 500;
   letter-spacing: 0.03em;
-  color: var(--current-color);
+  color: #212121;
   margin-bottom: 10px;
   border-radius: 0px 0px 4px 4px;
   margin: 0;
