--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -6,32 +6,32 @@
       align-items: center;
     margin: 0 auto;
     cursor: pointer;
-    color: var(--white-color);
-    background-color: var(--blue-logo-color);
+    color: $white-color;
+    background-color: $blue-logo-color;
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.9;
     letter-spacing: 0.06em;
     border-radius: 4px;
-    box-shadow: 0px 4px 4px 0px var(--button-shadow);
+    box-shadow: 0px 4px 4px 0px $button-shadow;
     border: none;
     padding: 10px 32px;
     transition-property: color, background-color;
-    transition-duration: var(--duration);
-  transition-timing-function: var(--cubic-bezier);
+    transition-duration: $duration;
+  transition-timing-function: $cubic-bezier;
   }
 
   .hero-button:hover,
 .hero-button:focus {
-  background-color: var(--blue-dark);
+  background-color: $blue-dark;
 }
 
 .select-button {
     cursor: pointer;
     font-family: inherit;
-    background-color: var(--light-gray-backg);
-    color: var(--current-color);
+    background-color: $light-gray-backg;
+    color: $current-color;
     border: none;
     font-weight: 500;
     font-size: 16px;
@@ -39,14 +39,14 @@
     border-radius: 4px;
 padding: 6px 22px;
 transition-property: color, background-color, box-shadow;
-transition-duration: var(--duration);
-transition-timing-function: var(--cubic-bezier);
+transition-duration: $duration;
+transition-timing-function: $cubic-bezier;
 }
 
 .select-button:hover,
 .select-button:focus {
-  background-color: var(--blue-logo-color);
-  color: var(--white-color);
+  background-color: $blue-logo-color;
+  color: $white-color;
 }
 
 .select-list {
@@ -63,8 +63,8 @@ transition-timing-function: var(--cubic-bezier);
   
   .select-button:hover,
   .select-button:focus {
-    background-color: var(--blue-logo-color);
-    color: var(--white-color);
+    background-color: $blue-logo-color;
+    color: $white-color;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   
   }
