--- a/scss/components/_social-list.scss
+++ b/scss/components/_social-list.scss
@@ -11,32 +11,32 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background-color: var(--footer-icon);
+    background-color: $footer-icon;
     width: 44px;
     height: 44px;
     transition-property: background-color;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--cubic-bezier);
+    transition-duration: $duration;
+    transition-timing-function: $cubic-bezier;
   }
 
   .footer
   .social-icon {
-    fill: var(--white-color);
+    fill: $white-color;
     
   }
   
   .social-icon {
-    fill: var(--social-icon);
+    fill: $social-icon;
     transition-property: fill;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--cubic-bezier);
+    transition-duration: $duration;
+    transition-timing-function: $cubic-bezier;
   }
   
   .social-link-icon:hover .social-icon,
 .social-link-icon:focus .social-icon {
-  fill: var(--white-color);
+  fill: $white-color;
 }
 .social-link-icon:hover,
 .social-link-icon:focus {
-  background-color: var(--blue-logo-color);
+  background-color: $blue-logo-color;
 }
