--- a/scss/components/_title.scss
+++ b/scss/components/_title.scss
@@ -3,7 +3,7 @@
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-    color: var(--current-color);
+    color: $current-color;
     margin-bottom: 50px;   
 }
 
@@ -14,6 +14,6 @@
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--white-color);
+    color: $white-color;
     margin-bottom: 20px;
   }
