--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -15,7 +15,7 @@
       font-size: 14px;
       line-height: 1.14;
       text-transform: uppercase;
-      color: var(--current-color);
+      color: $current-color;
       margin-bottom: 10px;
       
   }
