--- a/scss/layouts/_clients.scss
+++ b/scss/layouts/_clients.scss
@@ -9,15 +9,15 @@
     align-items: center;
     height: 92px;
     padding: 16px;
-    border: 1px solid var(--social-icon);
-    fill: var(--social-icon);
+    border: 1px solid $social-icon;
+    fill: $social-icon;
     border-radius: 4px;
     transition-property: border, fill;
-transition-duration: var(--duration);
-transition-timing-function: var(--cubic-bezier);
+transition-duration: $duration;
+transition-timing-function: $cubic-bezier;
   }
   .clients-link:hover,
 .clients-link:focus {
-  border: 1px solid var(--blue-logo-color);
-  fill: var(--blue-logo-color);
+  border: 1px solid $blue-logo-color;
+  fill: $blue-logo-color;
 }
