--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
-      background-color: var(--background-dark-grey);
+      background-color: $background-dark-grey;
   }
   
   .footer-container {
@@ -26,19 +26,57 @@
   }
   .address .link {
     transition-property: color;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--cubic-bezier);
+  transition-duration: $duration;
+  transition-timing-function: $cubic-bezier;
   }
   
   .address-link {
-      color: var(--footer-primary-color);
+      color: $footer-primary-color;
   }
   
   .street {
-      color: var(--white-color);
+      color: $white-color;
       
   }
   .address .link:hover,
   .address .link:focus{
-      color: var(--blue-logo-color);
+      color: $blue-logo-color;
+  }
+  .footer-submit-form {
+    display: flex;
+  }
+  
+  .footer-submit-form input {
+    width: 358px;
+    height: 50px;
+  margin-right: 12px;
+    padding: 16px 15px;
+  font-size: 16px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    color: $white-color;
+  }
+  
+  .subscribe-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $white-color;
+    margin-bottom: 20px;
+  }
+  
+  .button-submit {
+    background: $blue-logo-color;
+    box-shadow: 0px 4px 4px ;
+    border-radius: 4px;
+    border: none;
+  }
+  
+  .span-subscribe {
+    margin-right: 10px;
   }
