--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -4,7 +4,7 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
   border-bottom: 1px solid 
-  var(--color-border-header);
+  $color-border-header;
   }
   
   .header-container {
