--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -3,11 +3,11 @@
     margin-left: auto;
     margin-right: auto;
   display: flex;
-      background-color: var(--background-dark-grey);
+      background-color: $background-dark-grey;
       padding-top: 200px;
       padding-bottom: 200px;
       text-align: center;
-  background-image: linear-gradient(to right, var(--hero-shadow), var(--hero-shadow)),
+  background-image: linear-gradient(to right, $hero-shadow, $hero-shadow),
        url(../images/header-photo.jpg);
       background-repeat: no-repeat;
       background-position: center;
@@ -17,7 +17,7 @@
   
   
   .hero-title {
-      color: var(--white-color);
+      color: $white-color;
       font-weight: 900;
       font-size: 44px;
       text-transform: uppercase;
