--- a/scss/layouts/_team.scss
+++ b/scss/layouts/_team.scss
@@ -1,16 +1,16 @@
 .team {
-    background-color: var(--light-gray-backg);
+    background-color: $light-gray-backg;
 }
 
 
 .team-list__item {
-  box-shadow: 0px 1px 3px var(--team-btm), 0px 1px 1px var(--team-bl), 0px 2px 1px var(--team-br);
+  box-shadow: 0px 1px 3px $team-btm, 0px 1px 1px $team-bl, 0px 2px 1px $team-br;
 border-radius: 0px 0px 4px 4px;
    }
 
 .team__content {
     align-items: center;
-    background-color: var(--white-color);
+    background-color: $white-color;
 
     padding: 30px ;
    
@@ -29,7 +29,7 @@ border-radius: 0px 0px 4px 4px;
 .team__content {
     font-weight: 500;
     letter-spacing: 0.03em;
-    color: var(--current-color);
+    color: $current-color;
     margin-bottom: 10px;
     border-radius: 0px 0px 4px 4px;
     margin: 0;
