--- a/scss/layouts/_we-do.scss
+++ b/scss/layouts/_we-do.scss
@@ -21,12 +21,12 @@
       height: 70px;
       padding-right: 24px;
       padding-left: 24px;
-      background-color: var(--bgcolor-wdtext);
+      background-color: $bgcolor-wdtext;
     }
     .we-do-list__title {
       line-height: 1.14;
       font-weight: 700;
       text-align: center;
       text-transform: uppercase;
-      color: var(--white-color);
+      color: $white-color;
     }
