--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,12 +1,14 @@
 .team  {
     background-color: $light-gray-backg;
-}
 
 
-.team-list__item {
+&__list
+&__item {
   box-shadow: 0px 1px 3px $team-btm, 0px 1px 1px $team-bl, 0px 2px 1px $team-br;
 border-radius: 0px 0px 4px 4px;
    }
+}
+
 
 .team__content {
     align-items: center;
